# bash-scripting

./: .gitignore  Makefile  PRACTICE_GUIDE.md  README.md
bash_exercises/: README.md  exercise_10.md  exercise_11.md  exercise_12.md  exercise_13.md  exercise_15.md  exercise_3.md  exercise_5.md  exercise_9.md
bash_exercises/solutions/: exercise_10_solution.sh  exercise_11_solution.sh  exercise_12_solution.sh  exercise_14_solution.sh  exercise_15_solution.sh  exercise_2_solution.sh  exercise_3_solution.sh  exercise_4_solution.sh  exercise_5_solution.sh  exercise_7_solution.sh  exercise_8_solution.sh  exercise_9_solution.sh
bash_scripts/: backup_manager.sh  basic_script.sh  calculate_frequency.sh  install_me.sh  system_monitor.sh
build_python_exercise/: Makefile  README.md  comparison.md  requirements.txt  run_examples.sh
build_python_exercise/conda_project/: LICENSE  README.md  meta.yaml  setup.py  setup_and_build.sh
build_python_exercise/conda_project/conda_demo/: __init__.py  cli.py
build_python_exercise/demo_data/: sample_sales.csv
build_python_exercise/demo_scripts/: data_analysis_demo.py
build_python_exercise/docker_builds/: Dockerfile  README.md  build_and_run.sh  pyproject.toml  requirements.txt  setup.py
build_python_exercise/docker_builds/src/demo_app/: __init__.py  main.py
build_python_exercise/etl_examples/: README.md  requirements.txt  run.sh
build_python_exercise/etl_examples/data/: employees.csv  products.json
build_python_exercise/etl_examples/extract/: api_extractor.py  csv_extractor.py  json_extractor.py
build_python_exercise/etl_examples/load/: batch_loader.py  warehouse_loader.py
build_python_exercise/etl_examples/transform/: aggregator.py  data_cleaner.py
build_python_exercise/flit_project/: .gitignore  README.md  pyproject.toml  setup_and_build.sh
build_python_exercise/flit_project/flit_demo/: __init__.py  main.py
build_python_exercise/hatch_project/: README.md  pyproject.toml  setup_and_build.sh
build_python_exercise/hatch_project/src/hatch_demo/: __about__.py  __init__.py  cli.py
build_python_exercise/hatch_project/tests/: test_cli.py  test_config.py
build_python_exercise/pdm_project/: pyproject.toml
build_python_exercise/pipenv_project/: Pipfile
build_python_exercise/poetry_project/: README.md  pyproject.toml  setup_and_build.sh
build_python_exercise/poetry_project/src/poetry_demo/: __init__.py  cli.py
build_python_exercise/poetry_project/tests/: __init__.py  test_cli.py  test_config.py
build_python_exercise/pyinstaller_builds/: app.py  app.spec
build_python_exercise/pyspark_examples/: data_analysis.py  etl_pipeline.py  wordcount.py
build_python_exercise/python_examples/: data_generator.py  pandas_analysis.py
build_python_exercise/setuptools_project/: LICENSE  README.md  requirements.txt  setup.py  setup_and_build.sh
build_python_exercise/setuptools_project/src/setuptools_demo/: __init__.py  cli.py  core.py  data_processor.py  ml_utils.py  utils.py
build_python_exercise/setuptools_project/tests/: test_core.py  test_data_processor.py  test_ml_utils.py
build_python_exercise/wheel_builds/: LICENSE  README.md  build_wheels.sh  pyproject.toml  requirements.txt
build_python_exercise/wheel_builds/src/wheel_demo/: __init__.py  cli.py  core.py  utils.py  wheel_tools.py
build_python_exercise/wheel_builds/tests/: test_core.py  test_utils.py  test_wheel_tools.py
build_scala_exercise/: Makefile  README.md
build_scala_exercise/demo_data/: sales_data.csv
build_scala_exercise/demo_scripts/: run_spark_demos.sh
build_scala_exercise/gradle_project/: build.gradle
build_scala_exercise/maven_project/: pom.xml
build_scala_exercise/sbt_project/: .scalafmt.conf  README.md  build.sbt  build_and_run.sh  run_examples.sh
build_scala_exercise/sbt_project/data/: financial_data.csv  large_data.csv  sensor_readings.csv  test_data.csv
build_scala_exercise/sbt_project/project/: plugins.sbt
build_scala_exercise/sbt_project/src/main/scala/com/example/sbtdemo/: DataProcessor.scala  Main.scala
build_scala_exercise/sbt_project/src/test/scala/com/example/sbtdemo/: DataProcessorSpec.scala
build_scala_exercise/spark_maven/: pom.xml
build_scala_exercise/spark_sbt/: README.md  build.sbt  build_and_run.sh
build_scala_exercise/spark_sbt/data/: financial_spark.csv  large_dataset.csv  spark_sample.csv
build_scala_exercise/spark_sbt/project/: plugins.sbt
build_scala_exercise/spark_sbt/src/main/scala/com/example/: DataAnalytics.scala  MLPipeline.scala  StreamingAnalytics.scala  WordCount.scala
build_scala_exercise/spark_sbt/src/main/scala/com/example/sparksbt/: SparkDataProcessor.scala
build_scala_exercise/spark_sbt/src/test/scala/com/example/: DataAnalyticsTest.scala  WordCountTest.scala
build_scala_exercise/spark_sbt/src/test/scala/com/example/sparksbt/: SparkDataProcessorSpec.scala
cronjob/: README.md  craw_cron.txt  crawl.py  requirements.txt  run.sh
data/: data1.csv
exercises/: README.md  exercise_1.md  exercise_14.md  exercise_2.md  exercise_4.md  exercise_6.md  exercise_7.md  exercise_8.md
exercises/solutions/: exercise_13_solution.sh  exercise_1_solution.sh  exercise_6_solution.sh
exercises/tests/: test_example.sh
makefile_exercises/: README.md  exercise_1.md  exercise_1_solution.mk  exercise_2.md  exercise_2_solution.mk  exercise_3.md  exercise_3_solution.mk  exercise_4.md  exercise_4_solution.mk  exercise_5.md  exercise_5_solution.mk  help_example.mk
scripts/: csv_processor.sh  file_monitor.sh  log_analyzer.sh
