[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-app"
version = "1.0.0"
description = "Docker demo application"
authors = [{name = "Demo Author", email = "demo@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "flask>=2.3.0",
    "gunicorn>=20.1.0"
]

[project.scripts]
demo-app = "demo_app.main:main"