[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flit-demo"
authors = [{name = "Demo Author", email = "demo@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "Lightweight Flit packaging demo"
keywords = ["flit", "packaging", "lightweight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests >= 2.28.0",
    "click >= 8.0.0",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest >= 7.0.0",
    "pytest-cov >= 4.0.0",
]
dev = [
    "black >= 22.0.0",
    "flake8 >= 5.0.0",
    "mypy >= 1.0.0",
]

[project.scripts]
flit-demo = "flit_demo:main"

[project.urls]
Home = "https://github.com/example/flit-demo"
Documentation = "https://flit-demo.readthedocs.io"
Source = "https://github.com/example/flit-demo"

[tool.flit.module]
name = "flit_demo"

[tool.flit.sdist]
include = ["tests/"]
exclude = [".*"]