[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm-demo"
dynamic = ["version"]
description = "PDM package manager demo with PEP 582 support"
authors = [
    {name = "Demo Author", email = "demo@example.com"},
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "pydantic>=1.10.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["pdm", "packaging", "pep582"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
cli = [
    "rich>=12.0.0",
    "typer>=0.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
pdm-demo = "pdm_demo.cli:main"

[project.urls]
Homepage = "https://github.com/example/pdm-demo"
Repository = "https://github.com/example/pdm-demo"
Documentation = "https://pdm-demo.readthedocs.io"

[tool.pdm]
version = {source = "file", path = "src/pdm_demo/__version__.py"}
author-email = "demo@example.com"
home-page = "https://github.com/example/pdm-demo"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.0",
]
lint = [
    "black>=22.0.0",
    "ruff>=0.0.200",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[tool.pdm.scripts]
test = "pytest tests/"
test-cov = "pytest --cov=pdm_demo --cov-report=html --cov-report=term-missing tests/"
lint = "ruff check src/ tests/"
format = "black src/ tests/"
type-check = "mypy src/"
docs = "sphinx-build -b html docs/ docs/_build/"
clean = "rm -rf build/ dist/ *.egg-info/ __pypackages__/"

# PEP 582 support
[tool.pdm.python]
requires = ">=3.8"

# Build configuration
[tool.pdm.build]
includes = ["src/pdm_demo"]
excludes = ["tests/", "docs/"]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]