[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheel-demo"
version = "1.0.0"
description = "Wheel building demonstration with modern Python packaging"
authors = [
    {name = "Demo Author", email = "demo@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.8.0",
    "wheel>=0.37.0",
]

[project.scripts]
wheel-demo = "wheel_demo.cli:main"

[project.urls]
Homepage = "https://github.com/example/wheel-demo"
Repository = "https://github.com/example/wheel-demo.git"
Documentation = "https://wheel-demo.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]